# tb-processor

./: .gitignore  README.md  pyproject.toml
docs/: README.md
tb_processor/: __init__.py  cli.py  combiner.py  config.py  file_utils.py  loader.py
tests/: test_file_utils.py  test_loader.py
