[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tb-processor"
version = "0.1.0"
description = "A tool to process trial balance excel files."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
pandas = "^1.3"
openpyxl = "^3.0"

[tool.poetry.scripts]
tb = "tb_processor.cli:main"
